--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-us">
 	<head>
 		<title>TAFSEER-E-QURAN | Day 7</title>
+		<meta name="description" content="Learn arabic language of Quran in the most simplist way in english along with examples from the Holy Quran. Also learn frequently used words in the quran and their meanings for free">
+		<meta name="keywords" content="Verbs, Nouns, Past tense, Present tense, Future tense, Active Voice, Passive Voice, Mascular, Feminine, Singular, Plurals, Pronouns, He-She-It, Demonstrative pronouns, This & That, Words in different shapes, Orders, Orders of passive voice, Pronouns for Subjects, Pronouns for Objects, frequently used words, vocabulary, meanings, words in quran with meanings, Translation of Surahs of Quran">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
@@ -11,7 +13,7 @@
 
 		<div class="logo">&copy; TAFSEER-E-QURAN</div>
 
-		<div><a href="tafseer-e-quran.github.io/homepage/"><i class="fa-solid fa-house icon"></i></a></div>
+		<div><a href="https://tafseer-e-quran.github.io/homepage/"><i class="fa-solid fa-house icon"></i></a></div>
 		<br><br>
 
 		<h1>PRONOUNS<br> PRESENT / FUTURE TENSES</h1>
